5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1592_2425.log
== SUBMITION (2019-03-25 13:55:04) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print(round(Cm,3))
-- EXECUTION TIME:
0.133622
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
Distancia:Litros:14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
Distancia:Litros:18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
Distancia:Litros:9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:55:07) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print(round(Cm,3))
-- EXECUTION TIME:
0.139291
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:55:21) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print(round(Cm,3)"km/l")
-- EXECUTION TIME:
0.159833
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(Cm,3)"km/l")
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:04:32) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print(round(Cm,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(Cm,3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:04:35) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print(round(Cm,3)"km/l")
-- EXECUTION TIME:
0.176335
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(Cm,3)"km/l")
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:04:46) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3)"km/l"))
-- EXECUTION TIME:
0.15834
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print((round(Cm,3)"km/l"))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:04:58) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3)"km/l"))
-- ERROR:
File "XXXX", line 4
    print((round(Cm,3)"km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:13:54) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3)"km/l"))
-- ERROR:
File "XXXX", line 4
    print((round(Cm,3)"km/l"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:01) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3),"km/l"))
-- EXECUTION TIME:
0.194976
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
(14.286, 'km/l')
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
(18.119, 'km/l')
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
(9.802, 'km/l')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:19) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3,"km/l")))
-- EXECUTION TIME:
0.164846
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 4, in <module>
    print((round(Cm,3,"km/l")))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:14:24) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3,"km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((round(Cm,3,"km/l")))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:15:11) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3),"km/l")
-- EXECUTION TIME:
0.174404
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:29:17) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= D/L
print((round(Cm,3),"km/l")
-- EXECUTION TIME:
0.135163
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:29:28) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= (D/L)
print((round(Cm,3),"km/l")
-- ERROR:
File "XXXX", line 5
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:30:03) 
-- CODE:
D=float(input("Distancia:"))
L=float(input("Litros:"))
Cm= (D/L)
print((round(Cm,3)),"km/l")
-- EXECUTION TIME:
0.177795
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
